Mise en place du Jwt pour l'authentification